Add form with name input and PHP processing script

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <p>react project</p>
-    <form action="" method="post">
+    <form action="form.php" method="post">
         <label for="name">name</label>
         <input type="text" name="name" placeholder="name" />
+        <input type="submit" value="">
     </form>
     
 </body>
