Add form with name input and PHP processing script

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>react project</p>
-    <form action="form.php" method="post">
+    <form action="form.php">
         <label for="name">name</label>
         <input type="text" name="name" placeholder="name" />
         <input type="submit" value="">
